# mach-ten-project-artifacts

./: README.md  appinfo.json
app-of-the-day/: README.md
category/games/2026/02-06-21-neon-snake-retro/: README.md  main.py
category/games/2026/02-06-22-color-flood-puzzle/: game.js  index.html  main.py  style.css
category/games/2026/02-06-23-galactic-dodge-classic/: README.md
category/games/2026/02-07-01-rhythmic-tile-tap-classic/: index.html
category/games/2026/02/0621-neon-snake-retro/: pyproject.toml
category/games/2026/02/0622-color-flood-puzzle/: README.md  pyproject.toml
category/games/2026/02/0623-galactic-dodge-classic/: game.js  index.html  style.css
category/games/2026/02/0624-zen-garden-match-three/: README.md  index.html
category/games/2026/02/0700-minimalist-falling-sand-box/: README.md  index.html  pyproject.toml
category/games/2026/02/0700-quantum-mine-sweeper-lite/: README.md  index.html
category/games/2026/02/0701-rhythmic-tile-tap-classic/: README.md  pyproject.toml
category/games/2026/02/0712-neon-snake-retro/: README.md  index.html
category/games/2026/02/0713-gravity-stack-balance/: README.md  index.html
category/games/2026/02/1738891527-lunar-lander-physics-lite/: index.html
category/games/2026/02/1738933488-polar-bear-ice-bridge/: README.md  main.py
category/games/2026/02/1738935003-geometric-shape-sorter-pro/: main.py
category/games/2026/02/1738964309-vector-tower-defense-lite/: README.md  (+3 more)
category/games/2026/02/1738965018-vector-tictactoe-strategic-variant/: game.py  pyproject.toml
category/games/2026/02/1739023920-vector-plumber-pipe-connector/: appinfo.json  pyproject.toml
category/games/2026/02/1739023920-vector-plumber-pipe-connector/vector_plumber_pipe_connector.egg-info/: PKG-INFO  entry_points.txt
category/games/2026/02/20250208-151140-000-vector-simon-says-logic/: README.md  appinfo.json  config.py  game.py  main.py  pyproject.toml  test_game.py
category/games/2026/02/20250208-151140-vector-simon-says-logic/: jira1.txt  pyproject.toml
category/games/2026/02/20250208-153011-000-vector-battleship-strategic-fleet/: README.md  ai.py  appinfo.json  board.py  config.py  game.py  pyproject.toml
category/games/2026/02/20250208-154011-000-vector-golf-solitaire-classic/: README.md  appinfo.json  config.py  game.py  main.py  pyproject.toml
category/games/2026/02/20250208-154011-000-vector-golf-solitaire-classic/vector_golf_solitaire_classic.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
category/games/2026/02/20260208-124720-000-vector-lemmings-path-bridge/: README.md  agent.py  appinfo.json  config.py  game.py  level.py  main.py  pyproject.toml
category/games/2026/02/20260208-131132-000-vector-frogger-road-cross/: README.md  appinfo.json  config.py  entities.py  game.py  main.py  pyproject.toml
category/games/2026/02/20260209-005800-vector-mario-platformer-lite/: README.md  main.py  pyproject.toml
category/games/2026/02/20260209-020000-vector-paperboy-delivery-route/: README.md  appinfo.json  main.py  pyproject.toml
category/games/2026/02/20260209-020100-vector-elevator-action-stealth/: README.md  appinfo.json  main.py  pyproject.toml
category/games/2026/02/20260209-021049-vector-bubble-bobble-simple-clear/: README.md  appinfo.json  main.py  pyproject.toml
category/games/2026/02/20260209-023000-vector-spy-hunter-road-combat/: README.md  appinfo.json  main.py  pyproject.toml
category/games/2026/02/20260209-023048-vector-karate-champ-logic/: appinfo.json  config.py  entities.py  game.py  main.py  pyproject.toml
category/games/2026/02/20260209-043051-vector-frogger-river-cross/: README.md  appinfo.json  config.py  entities.py  game.py  main.py  pyproject.toml
category/games/2026/02/20260209-061052-vector-kung-fu-master-climb/: README.md  appinfo.json  constants.py  entities.py  game.py  main.py  pyproject.toml
category/games/2026/02/20260210-053052-vector-super-mario-bros-enemy-stomp/: README.md  appinfo.json  main.py  pyproject.toml
category/games/2026/02/20260210-053052-vector-super-mario-bros-enemy-stomp/vector_super_mario_bros_enemy_stomp/: __init__.py  game.py
category/games/2026/02/20260210-091530-vector-super-mario-bros-pipe-warp/: README.md  appinfo.json  config.py  game.py  main.py  pyproject.toml
category/games/2026/02/20260210-163500-vector-super-mario-bros-water-swim-avoid/: README.md  appinfo.json  config.py  entities.py  game.py  main.py  pyproject.toml  renderer.py  runtime_analysis.json  static_analysis.json
category/games/2026/02/20260210-205100-vector-super-mario-bros-maze-coin-hunt/: README.md  appinfo.json  main.py  pyproject.toml  run.sh  runtime_analysis.json  static_analysis.json
category/games/2026/02/20260210-213500-vector-super-mario-bros-multi-level-platformer/: README.md  appinfo.json  main.py  pyproject.toml  runtime_analysis.json  static_analysis.json
category/games/2026/02/20260211-010500-vector-ice-block-pengo-push/: README.md  appinfo.json  main.py  pyproject.toml  run.bat  runtime_analysis.json  static_analysis.json
category/games/2026/02/20260211-145327-vector-super-mario-bros-jump-and-dash-pro/: README.md  appinfo.json  config.py  entities.py  game.py  main.py  pyproject.toml  runtime_analysis.json  static_analysis.json
category/games/2026/02/20260211-162000-vector-super-mario-bros-infinite-bridge-sprint/: README.md  appinfo.json  config.py  entities.py  game.py  main.py  pyproject.toml  run.sh  runtime_analysis.json  static_analysis.json
category/games/2026/02/20260214-041000-vector-super-mario-bros-paratroopa-jump/: README.md  appinfo.json  config.py  entities.py  game.py  main.py  pyproject.toml  run.sh  runtime_analysis.json  runtime_test.py  static_analysis.json
category/games/2026/02/20260214-185500-vector-super-mario-bros-hammer-bro-dodge/: README.md  appinfo.json  game.py  pyproject.toml  run.bat  runtime_analysis.json  static_analysis.json
category/games/2026/02/20260215-081030-vector-ice-block-pengo-logic/: README.md  appinfo.json  config.py  game.py  main.py  pyproject.toml  run.bat  runtime_analysis.json  static_analysis.json
(+136 files in other folders)
