[project]
name = "neon-snake-retro"
version = "1.0.0"
description = "A classic snake game with neon visual style"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "pygame>=2.6.0",
]

[project.scripts]
neon-snake = "main:main"

[tool.hatch.build.targets.wheel]
packages = ["."]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
