[project]
name = "vector-tictactoe-strategic-variant"
version = "0.1.0"
description = "Strategic tic-tac-toe variant with limited pieces and movement mechanics"
requires-python = ">=3.10"
dependencies = [
    "pygame>=2.5.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]
