[project]
name = "vector-simon-says-logic"
version = "0.1.0"
description = "A high-speed, logic-driven sequence memory game"
requires-python = ">=3.12,<3.14"
dependencies = [
    "pygame>=2.6.0",
]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
py-modules = ["main", "game", "config"]

[project.scripts]
start = "main:main"
