[project]
name = "vector-golf-solitaire-classic"
version = "0.1.0"
description = "Clear all cards from the tableau by matching numbers in a fast-paced strategic solitaire variant"
requires-python = ">=3.11"
dependencies = [
    "pygame-ce>=2.5.0",
]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
py-modules = ["main", "game", "config"]

[project.scripts]
start = "main:main"
