[project]
name = "vector-bubble-bobble-simple-clear"
version = "0.1.0"
description = "Clear the screen by trapping monsters in bubbles and popping them"
requires-python = ">=3.11"
dependencies = [
    "pygame>=2.6.0",
]

[project.scripts]
vector-bubble-bobble-simple-clear = "main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]
