[project]
name = "vector-super-mario-bros-maze-coin-hunt"
version = "0.1.0"
description = "Navigate a dynamic Mario-themed maze to collect coins while avoiding patrolling Koopas in a race against time."
requires-python = ">=3.10"
dependencies = [
    "pygame>=2.5.0",
]

[tool.uv]
dev-dependencies = []

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]
