[project]
name = "vector-super-mario-bros-multi-level-platformer"
version = "0.1.0"
description = "A classic side-scrolling platformer featuring procedural level progression and physics-based movement."
requires-python = ">=3.10"
dependencies = [
    "pygame>=2.5.0",
]

[dependency-groups]
dev = []

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]
