[project]
name = "vector-ice-block-pengo-push"
version = "0.1.0"
description = "Strategic block-pushing puzzle where you crush enemies between ice slides."
requires-python = ">=3.12"
dependencies = [
    "pygame-ce>=2.5.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]
