[project]
name = "vector-super-mario-bros-jump-and-dash-pro"
version = "0.1.0"
description = "Master the art of momentum in this high-speed precision platformer challenge"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pygame-ce>=2.5.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]
