[project]
name = "vector-super-mario-bros-paratroopa-jump"
version = "0.1.0"
description = "Master the art of sequential paratroopa bouncing to reach the highest heights"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pygame-ce>=2.5.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]
