[project]
name = "vector-super-mario-bros-hammer-bro-dodge"
version = "0.1.0"
description = "Dodge hammers from the iconic Hammer Brother in this precision timing game"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "pygame-ce>=2.5.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]
