[project]
name = "vector-ice-block-pengo-logic"
version = "0.1.0"
description = "Strategic ice-block sliding puzzle where you crush enemies and align goals."
requires-python = ">=3.12,<3.14"
dependencies = [
    "pygame>=2.5.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]
